# simsig

./: .coveragerc  .gitignore  Makefile  README.md  SECURITY.md  TODO.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
examples/: EXAMPLES.md  ex0.py  ex1.py  ex2.py  ex3.py
simsig/: __init__.py  simsig.py
tests/: TESTING.md  test_simsig.py
