[project]
name = "simsig"
version = "0.1.0"
description = ""
authors = [
    { name = "Alex Semenyaka", email = "alex.semenyaka@gmail.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
#Homepage = ""
#Repository = ""
#Issues = ""

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
